# product-search-service

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml
django_app/: Dockerfile  pyproject.toml
django_app/src/: entrypoint.sh  gunicorn_conf.py
django_app/src/config/: settings.py  urls.py
django_app/src/product/: models.py  urls.py  views.py
django_app/src/product/management/commands/: create_es_index.py  create_kafka_topic.py
django_app/src/product/services/: es_client.py  kafka_producer.py  product_cache.py
fastapi_worker/: .flake8  Dockerfile  main.py  pyproject.toml
fastapi_worker/app/: config.py  db.py  deps.py  kafka_worker.py  models.py  repo.py  schemas.py  service.py
