[tool.poetry]
name = "fastapi_worker"
version = "0.1.0"
description = ""
authors = [" "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
ipython = "^8.31.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.36"
orjson = "^3.10.12"
pypika = "^0.48.9"
httpx = "^0.28.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output=3
include_trailing_comma=true
line_length=119
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["app", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    "alembic",
]
known_fastapi=["fastapi","starlette"]
known_first_party=["api","common","config","deps","infra","service"]
sections=[
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
